--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,6 +47,10 @@ img.leaflet-tile, img.leaflet-marker-icon, img.leaflet-marker-shadow {
   animation: marquee 15s linear infinite;
 }
 
+.glow-blue {
+  box-shadow: 0 0 25px rgba(96, 165, 250, 0.5);
+}
+
 @layer base {
   body {
     @apply bg-secondary w-full leading-relaxed;
