--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,6 +51,10 @@ img.leaflet-tile, img.leaflet-marker-icon, img.leaflet-marker-shadow {
   box-shadow: 0 0 25px rgba(96, 165, 250, 0.5);
 }
 
+div:has(.custom-tooltip) {
+  z-index: 999;
+}
+
 @layer base {
   body {
     @apply bg-secondary w-full leading-relaxed;
